--- a/index0.html
+++ b/index0.html
@@ -65,8 +65,7 @@
     <div class="sections-wrapper">
       <!-- Sections-->
       <!-- Home-->
-      <section class="home-area element-cover-bg galaxy-variant" id="home-area" style="background-image:url(img/home.jpg)">
-        <div id="particles-js"></div>
+      <section class="home-area element-cover-bg" id="home-area" style="background-image:url(img/home.jpg)">
         <div class="container h-100">
           <div class="row h-100 align-items-center justify-content-center">
             <div class="col-12 col-lg-8 home-content text-center">
